--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 *.class
 
+/Bucles/Ejercicio2/nbproject/private/
+/Bucles/nbproject/private/
+/Bucles/build/
+/Bucles/dist/
+/Bucles2/nbproject/private/
+/JavaLibrary1/nbproject/private/
+/JavaLibrary1/build/
+/JavaApplication8/nbproject/private/
+/JavaLibrary3/nbproject/private/
+/JavaLibrary3/build/
